--- a/app/views/essentials/arrays_2.html.erb
+++ b/app/views/essentials/arrays_2.html.erb
@@ -1,2 +1,8 @@
 <h1>Essentials#arrays_2</h1>
 <p>Find me in app/views/essentials/arrays_2.html.erb</p>
+
+<!-- Accessing data from Arrays (use an index): -->
+
+<p>The first student is <%= @students[0] %>.</p>
+<p>The second student is <%= @students[1] %>.</p>
+<p>The last student is <%= @students.last %>.</p>
