--- a/app/views/essentials/methods_6.html.erb
+++ b/app/views/essentials/methods_6.html.erb
@@ -1,2 +1,5 @@
 <h1>Essentials#methods_6</h1>
 <p>Find me in app/views/essentials/methods_6.html.erb</p>
+
+<p><%= @encrypted_string %></p>
+<p><%= @decrypted_string %></p>
