--- a/app/views/essentials/methods_6.html.erb
+++ b/app/views/essentials/methods_6.html.erb
@@ -1,5 +1,13 @@
 <h1>Essentials#methods_6</h1>
 <p>Find me in app/views/essentials/methods_6.html.erb</p>
 
-<p><%= @encrypted_string %></p>
-<p><%= @decrypted_string %></p>
+<dl>
+  <dt>Starting String</dt>
+  <dd><%= @starting_string %></dd>
+
+  <dt>Encrypted String</dt>
+  <dd><%= @encrypted_string %></dd>
+
+  <dt>Decrypted String</dt>
+  <dd><%= @decrypted_string %></dd>
+</dl>
