--- a/app/views/essentials/test.html.erb
+++ b/app/views/essentials/test.html.erb
@@ -389,7 +389,7 @@ color:red;
     </form>
 
 
-<%else%>   <!--else for 2nd page
+<%else%>   <!--else for 2nd page!`-->
 
 
 
@@ -405,9 +405,9 @@ color:red;
 <%@hotelhash['HotelListResponse']['HotelList']['HotelSummary'].each do |zebra|%>
 
 
-
 <form id="accordion<%=counter%>" action="/essentials/hoteldetails" method="post">
-<!-- Your Form -->
+
+
 <a href="javascript:{}" onclick="document.getElementById('accordion<%=counter%>').submit(); return false;">
 
 
